--- a/wiki/V8Convert.wiki
+++ b/wiki/V8Convert.wiki
@@ -107,22 +107,22 @@ Each of those three classes has a corresponding function with a similar name. Th
   * `MethodToInvocationCallback()`
   * `ConstMethodToInvocationCallback()`
 
-These exist largely for historical reasons - they have largely been obsoleted by restructuring of the underlying class templates.
+These exist largely for historical reasons - they have been rendered redundant by restructuring of the underlying class templates.
 
 In all three cases, the static `Call()` method of the classes is the same function as the corresponding `xxxToInvocationCallback()` function template. An example should clarify that point:
 
 {{{
 // These are all functionally equivalent:
-v8::InvocationCallback cb2 = FunctionToInCa<int (char const *),::puts>::Call;
-v8::InvocationCallback cb1 = FunctionToInvocationCallback<int (char const *),::puts>;
+v8::InvocationCallback cb1 = FunctionToInCa<int (char const *),::puts>::Call;
+v8::InvocationCallback cb2 = FunctionToInvocationCallback<int (char const *),::puts>;
 v8::InvocationCallback cb3 = ToInCa<void, int (char const *),::puts>::Call;
 }}}
 
-Those all refer to the same underlying function (though their memory addresses differ). The first and 3rd forms are actually a tad bit more efficient because the second approach creates another one-line wrapper function between v8 and the bound function. The second form is, however, more prevalently documented because the client-side value of the second form was not recognized as early on as it should have been (and the 3rd form was just introduced about 30 minutes ago, as of this writing).
-
-Note that binding to non-static member member methods requires (at runtime), that `CastFromJS<T>()` can convert the current JS 'this' object to its native counterpart. See the included demo code an example of one way to set this up (there are many ways).
+Those all refer to the same underlying function (though their memory addresses differ). The first and 3rd forms are actually a tad bit more efficient because the second approach creates another one-line wrapper function between v8 and the bound function. The second form is, however, more prevalently documented because the client-side value of the first form was not recognized as early on as it should have been (and the 3rd form was just introduced about 30 minutes ago, as of this writing).
 
 Because these templates _create_ `v8::InvocationCallback` functions at compile-time, they require no dynamically-allocated proxy objects or other hidden memory usage like some binding mechanisms require. The only overhead these templates add is the conversion of arguments/return values to/from JS. The library does as much work as possible at compile time to help detect type-conversion errors early and help avoid extra runtime costs.
+
+Note that binding to non-static member member methods requires (at runtime), that `CastFromJS<T>()` can convert the current JS 'this' object to its native counterpart. See the included demo code an example of one way to set this up (there are many ways).
 
 
 == Examples ==
