--- a/wiki/V8Convert.wiki
+++ b/wiki/V8Convert.wiki
@@ -77,17 +77,20 @@ Quite possibly the simplest way in the world to convert free functions and membe
 {{{
 v8::InvocationCallback cb;
 
-// A free function: int puts(char const *)
-cb = cv::ToInCa<void, int (char const *), ::puts>::Call;
-// The first 'void' parameter is only used for Function, not Method, conversions!
-
 // A non-const method: int MyType::nonConstMethod(char const *)
 cb = cv::ToInCa<MyType, int (char const *), &MyType::nonConstMethod>::Call;
 
 // A const method: int MyType::constMethod(char const *) const
 cb = cv::ToInCa<MyType, int (char const *) const, &MyType::constMethod>::Call;
 // Note the trailing 'const' qualifier on the function signature!
+
+// A free function: int puts(char const *)
+cb = cv::ToInCa<void, int (char const *), ::puts>::Call;
+// Functions (not Methods) require 'void' as the first parameter!
 }}}
+
+Because these templates _create_ `v8::InvocationCallback` functions at compile-time, they require no dynamically-allocated proxy objects or other hidden memory usage like some binding mechanisms require. The only overhead these templates add is the conversion of arguments/return values to/from JS. The library does as much work as possible at compile time to help detect type-conversion errors early and help avoid extra runtime costs.
+
 
 The `ToInCa` template is a thin wrapper around three primary class templates:
 
@@ -100,14 +103,15 @@ a wide variety of native functions to arbitrary JS objects (where language calli
 
 Support for const- and non-const methods are split into two implementations because some compilers reportedly cannot properly choose differing specializations when the difference is only in constness. (i have only heard of this being a problem on MSVC.)
 
-Each of those three classes has a corresponding function with a similar name. The class provides a "fully typed" conversion of the function and remembers the function's arity (how many arguments it takes), whereas the function variant is simply an unadorned function pointer:
+Note that binding to non-static member member methods requires (at runtime), that `CastFromJS<T>()` can convert the current JS 'this' object to its native counterpart. See the included demo code an example of one way to set this up (there are many ways).
 
+Each of the class templates listed above has a corresponding function with a similar name. The class provides a "fully typed" conversion of the function and remembers the function's arity (how many arguments it takes) and the types of all arguments, whereas these function variants are simply unadorned function pointers without supplemental type information:
 
   * `FunctionToInvocationCallback()`
   * `MethodToInvocationCallback()`
   * `ConstMethodToInvocationCallback()`
 
-These exist largely for historical reasons - they have been rendered redundant by restructuring of the underlying class templates.
+These exist largely for historical reasons - they have been rendered redundant by restructuring of the underlying class templates. (And the new APIs have shorter names. :)
 
 In all three cases, the static `Call()` method of the classes is the same function as the corresponding `xxxToInvocationCallback()` function template. An example should clarify that point:
 
@@ -118,14 +122,35 @@ v8::InvocationCallback cb2 = FunctionToInvocationCallback<int (char const *),::p
 v8::InvocationCallback cb3 = ToInCa<void, int (char const *),::puts>::Call;
 }}}
 
-Those all refer to the same underlying function (though their memory addresses differ). The first and 3rd forms are actually a tad bit more efficient because the second approach creates another one-line wrapper function between v8 and the bound function. The second form is, however, more prevalently documented because the client-side value of the first form was not recognized as early on as it should have been (and the 3rd form was just introduced about 30 minutes ago, as of this writing).
+Those all refer to the same underlying function (though their memory addresses differ). The first and third forms are actually a tad bit more efficient because the second approach creates another one-line wrapper function between v8 and the bound function. The second form is, however, more prevalently documented because the client-side value of the first form was not recognized as early on as it should have been (and the 3rd form was just introduced about 30 minutes ago, as of this writing).
 
-Because these templates _create_ `v8::InvocationCallback` functions at compile-time, they require no dynamically-allocated proxy objects or other hidden memory usage like some binding mechanisms require. The only overhead these templates add is the conversion of arguments/return values to/from JS. The library does as much work as possible at compile time to help detect type-conversion errors early and help avoid extra runtime costs.
+==Argument Type Information==
 
-Note that binding to non-static member member methods requires (at runtime), that `CastFromJS<T>()` can convert the current JS 'this' object to its native counterpart. See the included demo code an example of one way to set this up (there are many ways).
+When using `FunctionToInCa` and friends (including `ToInCa`) we can use template techniques to get type information about the arguments if we want to use that for conversion purposes:
 
+{{{
+namespace cv = v8::convert;
+typedef ToInCa<void, int (char const *,double), my_function> MyFunc;
+
+typedef cv::ArgTypeAt< MyFunc, 0 > A0;
+typedef cv::ArgTypeAt< MyFunc, 1 > A1;
+//typedef cv::ArgTypeAt< MyFunc, 2 > A2; // compile-time error (arg out of bounds)
+}}}
+
+We can use further templating techniques to do things like choose different code paths based on that type information, as in this rather contrived example which changes `int64_` to `double` (v8 does not internally support 64-bit integers):
+
+{{{
+namespace tmp = cv::tmp;
+typedef tmp::IfElse< tmp::SameType<int64_t,ArgType0>::Value,
+                     double,
+                     ArgType0
+                   >::Type NumericType;
+}}}
+
+Template gurus will certainly come up with new and original ways to use and abuse this feature.
 
 == Examples ==
+
 Some examples of binding functions and methods:
 
 {{{
