--- a/wiki/V8Convert.wiki
+++ b/wiki/V8Convert.wiki
@@ -410,7 +410,7 @@ v8::InvocationCallback cb =
      >::Call;
 }}}
 
-When that callback is called, the calling code is locking v8, meaning that other v8-using threads cannot preempt it. When calling C-level APIs which themselves do not call back into v8, we normally instead want to tell v8 that other threads may run. That is done like this:
+When that callback is called, the calling code is locking v8, meaning that other v8-using threads cannot preempt it. When calling C-level APIs which themselves do not call back into v8, we may instead want to tell v8 that other threads may run. That is done like this:
 
 {{{
 ... somewhere inside a v8 callback function ...
@@ -421,9 +421,13 @@ When that callback is called, the calling code is locking v8, meaning that other
 ... v8 is locked again here, so we can use v8 again ...
 }}}
 
-As of the early morning of 20110625, the library includes support for optionally telling function bindings that they should unlock v8. This option is _off_ by default because it can be dangerous (e.g. if one of the converted types is a v8 type then results are undefined if we use it while unlocked).
+If the native function will run very briefly then unlocking will probably be slower than leaving v8 locked, but if the function may run an arbitrarily long amount of time, unlocking it is wise because v8 can then allow other threads to continue instead of blocking while this call holds the v8 lock.
 
-To create a "unlocked" version of a given binding, simply pass `true` as the final (optional) argument to `ToInCa` (and friends):
+As of the early morning of 20110625, the library includes generic support for optionally telling function bindings that they should unlock v8 for the duration of the native call.
+
+The default value for this option depends on the several factors but it will normally be enabled. If the function signature involved contains any v8 types then unlocking is disabled and an assertion is triggered if the client explicitly enables it.
+
+To force a given function/method binding to run in "unlocked" mode, simply pass `true` as the final (optional) argument to `ToInCa` (and friends):
 
 {{{
 v8::InvocationCallback cb;
@@ -431,18 +435,43 @@ v8::InvocationCallback cb;
 cb = cv::ToInCa<void, int (char const *), ::puts, true >::Call;
 // Is equivalent to:
 cb = cv::FunctionToInCa<int (char const *), ::puts, true >::Call;
+
+// Class methods are handled the same way:
+cb = cv::ToInCa<T, int (double), &T::foo>::Call;
 }}}
 
-*Achtung:* this support has a couple notable caveats. The ones which immediately come to mind are:
+*Achtung:* this support has a couple notable gotchas, caveats, and Things One Needs to Know. The ones which immediately come to mind are:
+
+  * A compile-time assertion will be triggered if you pass `true` to enable it and the function cannot, due to one of the types in its signature, be run in unlocked mode. See the `IsUnlockable<>` and `SignatureIsUnlockable<>` API docs for all the gory details.
+  * Unlocking tells v8 to perform some threading/mutex-related voodoo about which i know remarkably little. There is a performance hit for this, but it is marginal.
+  * _Reacquiring_ the v8 lock after the native function returns can theoretically take arbitrarily long. This could happen if the code being run in another thread never releases the v8 lock and runs in a loop which v8 cannot interrupt (e.g. the loop never calls back into v8).
+  * There is a minimal hidden memory cost: in order to be able to handle all return types properly (mainly those which cannot be default-initialized, like references), we have to dynamically allocate a `v8::Unlocker`, but only for the duration of the native call (that's the only way we can scope/descope them properly). i.e. it costs us one small `malloc()`/`free()` in addition to the overhead of unlocking/re-locking the v8 engine.
 
 It is illegal for the unlock option to be enabled if ANY of the following applies:
 
-  * The callback itself will "use" v8. (This _might_ be okay if it uses `a v8::Locker`. We'll have to try and see.)
-  * Any of the return or argument types for the function are v8 types, e.g. `v8::Handle<Anything>` or `v8::Arguments`.
-  * `InvocationCallback`-like functions will, if unlocking is enabled, trigger a compile-time assertion. We _cannot_ unlock for these because that would make using the `v8::Arguments` object illegal (which means we cannot legally pass on the arguments to the native function).
+  * The callback itself will "use" v8. If it uses a `v8::Locker` to fence its access then it _is_ legal to use v8 in that function even if unlocking is enabled at this API's level.
+  * Any of the return- or argument types, or the containing type itself for bound class methods, are  v8 types, e.g. `v8::Handle<Anything>` or `v8::Arguments`. These types cause unlocking to be disabled by default and a compile-time assertion is triggered if one explicitly tries to enable unlocking for such a function. By extension, but more concretely...
+  * `InvocationCallback`-like functions will, if unlocking is enabled, trigger a compile-time assertion. We _cannot_ unlock for these because that would make using the `v8::Arguments` object illegal (which would mean that we could not legally convert and pass on the arguments to the native function!).
 
-There might be other corner cases where unlocking v8 is semantically illegal at this level of the API but are not caught as compile-time errors. A notable example is that if any function argument is a v8 type (e.g. `v8::Handle<Anything>`) then enabling unlocking will have undefined results at runtime. Since the function bindings maintain all their type-related information, we might be able to add more template magic to catch even these cases at compile-time and then automatically enable unlocking when it seems safe to do so.
+There might be other corner cases where unlocking v8 is semantically illegal at this level of the API but are not caught as compile-time errors. A notable example is that if any function argument is a v8 type (e.g. `v8::Handle<Anything>`) then enabling unlocking will have undefined results at runtime. The "out of the box" behaviour uses template magic to disable unlocking by default for all such function/method signatures. See the `IsUnlockable<>` API docs for how to add additional types to "the blacklist" (it requires only a new template specialization with one enum value).
 
+i have in fact seen binding cases where the default determination of "can we safely unlock v8?" is incorrect, leading to v8 assertions (app crashes) at runtime. In such cases v8's assertion dump showed me where the problem was (which function calls) and i could use that info to disable unlocking for those few functions. They caused this error because they outwardly (in their signatures) use only non-v8 types, but internally they use v8 without also using a `v8::Locker` (they assume it's being called from JS and therefore already locked). So they crashed. In such cases, unlocking should be explicitly disabled for that bind, as shown above. If you are binding a class and want to disable unlocking for _all_ bound member functions of that class, do:
+
+{{{
+template <>
+cv::IsUnlockable<MyType> { { enum Value = 0 }; };
+}}}
+
+That effectively adds `MyType` to the "do not lock" list, and any bound JS functions which are members of that type, return that type, or have it in their arguments list will have unlocking support disabled by default. In such cases, explicitly enabling locking for any such function will cause a compile-time assertion to be triggered, just as it does for functions having v8 data types in their signatures. For example, assuming the above "blacklist specialization" is in place:
+
+{{{
+v8::InvocationCallback cb = 
+  cv::FunctionToInCa< int (MyType *, double), some_function >::Call;
+
+// That's legal b/c unlocking defaults to false. But this will fail to compile:
+cb =   cv::FunctionToInCa< int (MyType *, double), some_function, true >::Call;
+// because unlocking _cannot_ be enabled for that function (because of the `MyType` blacklist specialization).
+}}}
 
 ==Special Case: Catching native Exceptions==
 
@@ -569,6 +598,45 @@ MyType * my = Dispatch::Ctor( argsObject );
 }}}
 
 Unlike with most other bindings, the argument types do not need to match _exactly_. The types declared in the `CtorForwarder` instantiation will be used for purposes of converting the arguments from JS to native values. As long as those types can be implicitly converted to the types accepted by the constructor(s) then it should work okay. e.g. you can declare the forwarder as having an `int` argument even though the ctor really takes a `double`. (However, that would cause any doubles passed in from JS space to first be converted to an integer, which would lose precision.)
+
+=Brief Overview of `v8::convert` Architecture=
+
+This API is made up of several distinct components, each one layered on top of the next:
+
+  * Basic template-metaprogramming-related types, like a `TypeList` template and various utilities for querying them. Most of these are not really considered to be part of the public interface, but are necessary implementation details. Occasionally one of them leaks through to client-side code, most notably `TypeList`, which is used by some templates to implement overloading.
+  * The core type conversions layer, e.g. `CastToJS()`/`CastFromJS()`.
+  * Function/Method-signature-related templates. These do not do any JS/C++ conversions, but provide a mechanism with which we can store complete type information for a given function signature. These bits form the basis of the function binding API, but are not specific to that API.
+  * The function-to-`v8::InvocationCallback` conversions. This provides tons of template glue which creates `v8::InvocationCallback` functions by converting near-arbitrary function signatures to `v8::InvocationCallback`. These would not be possible without `CastToJS()` and `CastFromJS()`, which are used to convert all arguments and return types from/to JS.
+
+One of the most significant properties of this API is that it can report a wide variety of conversion errors at compile-time. Conversion APIs which are based on macros, as opposed to templates, (depressingly common in real-world v8 extension libraries) cannot come _anywhere close_ to achieving the flexibility and type-safety of this library.
+
+For example, the following errors will show up at compile time, not runtime:
+
+{{{
+int my_function( int, double );
+
+v8::InvocationCallback cb;
+
+// This is OK:
+cb = cv::FunctionToInCa< int (int,double), my_function>::Call; 
+
+// Compile error: type mismatch:
+cb = cv::FunctionToInCa< int (int,int), my_function>::Call;
+
+// Compile error: parameter count mismatch:
+cb = cv::FunctionToInCa< int (double), my_function>::Call;
+}}}
+
+As a side-note: that's not to say macros are absolutely evil - combining macros with this API can often greatly reduce the amount of typing needed to create bindings. For example, i often do the following in client-side code:
+
+{{{
+#define M2I cv::MethodToInCa
+#define C2I cv::ConstMethodToInCa
+#define F2I cv::FunctionToInCa
+#define CATCHER cv::InCaCatcher_std
+}}}
+
+But since the advent of `ToInCa` (7 hours ago, as of this writing ;), i've pretty much stopped doing even that.
 
 =Code Demos and Sample Bindings=
 
