--- a/wiki/V8Convert.wiki
+++ b/wiki/V8Convert.wiki
@@ -401,7 +401,7 @@ There is actually a limit to how many overloads you can provide in a single `InC
 
 ==Special Case: Non-Convertible Return Types==
 
-Sometimes we want to bind a function which has a return type which we cannot convert to JS. That means we can't bind it (compile errors if we try). There is, however, a half-workaround. If we don't mind simply losing the return type on the way to JS, we can use `ToInCaVoid<>` to generate an `v8::InvocationCallback` proxy which explicitly does not call `CastToJS()` to convert the return type. The implication of that is that we can then bind it, but JS will get the `undefined` value as the result:
+Sometimes we want to bind a function which has a return type which we cannot convert to JS. That means we can't bind it (compile errors if we try). There is, however, a half-workaround. If we don't mind simply losing the return value on the way back to JS, we can use `ToInCaVoid<>` to generate an `v8::InvocationCallback` proxy which explicitly does not call `CastToJS()` to convert the return type. The implication of that is that we can then bind it (despite the non-convertible return value), but JS will get the `undefined` value as the result of each call:
 
 {{{
 v8::InvocationCallback cb;
@@ -412,7 +412,7 @@ cb = cv::FunctionToInCaVoid<SomeNonConvertibleType (args...), myFunction>::Call;
 
 We can also use that to bind functions whos return types we _could_ convert but don't want to for some reason (e.g. we don't want native error goes going back to JS).
 
-Be careful not to leak resources this way. If the function returns dynamically-allocated resources from a function bound this way, they will be irrevocably leaked on every call to the function!
+Be careful not to leak resources this way. If dynamically-allocated resources are returned from a function bound this way, they will be irrevocably leaked on every call to the function!
 
 ==Special Case: Unlocking the v8 Engine==
 
@@ -616,6 +616,8 @@ MyType * my = Dispatch::Ctor( argsObject );
 }}}
 
 Unlike with most other bindings, the argument types do not need to match _exactly_. The types declared in the `CtorForwarder` instantiation will be used for purposes of converting the arguments from JS to native values. As long as those types can be implicitly converted to the types accepted by the constructor(s) then it should work okay. e.g. you can declare the forwarder as having an `int` argument even though the ctor really takes a `double`. (However, that would cause any doubles passed in from JS space to first be converted to an integer, which would lose precision.)
+
+An additional property of this particular binding is that we can bind to constructors which have default values for some arguments. e.g. if a constructor has 2 required arguments and 2 more optional ones, we can bind it as a 2, 3, and/or 4-arg constructor.
 
 =Brief Overview of `v8::convert` Architecture=
 
